lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lab3-service
  name: lab3-service
spec:
  selector:
    app: lab3-replica-set
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
